# thesis-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
keys/: cert.crt  private.key
patches/: 0001-Enable-TLSv1.3-by-default.patch  0001-mbedtls-Enable-TLSv1.3.patch  0001-mg-set-tls_mbed-impl-to-v1.3-by-default.patch
src/: main.c
